--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   },
   "dependencies": {
     "express": "3.2.0",
-    "jade": "*"
+    "jade": "*",
+    "config": "*",
+    "request": "*",
+    "passport": "*",
+    "passport-facebook": "*",
+    "passport-twitter": "*"
   }
 }
